# GBHttpServer

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  tasks.vs.json
Test/: Program.cs  Test.csproj  TestCaseBase.cs
Test/TestCase/: TestCase1.cs
TestHttpClient/: CMakeLists.txt  main.cpp
UnitTester/: Program.cs  UnitTester.csproj
UnitTester/TestCase/: TestCase1.cs  TestCase2.cs
core/: CMakeLists.txt  GBExpandedOverlapped.cpp  GBExpandedOverlapped.h  GBServer.cpp  GBServer.h  GBUtil.cpp  GBUtil.h
core/Shared/: ExternalPolymorphism.h  GBShared.cpp  GBShared.h  HeartBeat.h  ITimer.h  PrivateShared.cpp  PrivateShared.h  Shared (2).cpp  Shared (2).h  Shared.cpp  Shared.h  Singleton.h  StopWatch.h  StubAdaptor.h  Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h
core/client/: Client.cpp  Client.h  GBClient.cpp  GBClient.h  GameClient.h
core/server/: BufferAllocator.h  ExpandedOverlapped.cpp  ExpandedOverlapped.h  GBExpandedOverlapped.h  GBServer.cpp  GBServer.h  GBUtil.cpp  GameServer.cpp  GameServer.h  Server.cpp  Server.h  Util.cpp
engine/: CMakeLists.txt
engine/Shared/: HeartBeat.cpp  HeartBeat.h  ProcessExitObserver.h  Shared.cpp  Shared.h  StopWatch.h  TimerManager.cpp
engine/client/: Client.cpp  Client.h
engine/flatbufferschema/: internal.fbs
engine/server/: ExpandedOverlapped.h  Server.cpp  Server.h  Util.h
game/: BufferAllocator.cpp  BufferAllocator.h  CMakeLists.txt  GBGameServer.cpp  GBGameServer.h
game/client/: GBGameClient.cpp  GBGameClient.h  GameClient.cpp  GameClient.h
game/flatbufferschema/: internal_generated.h
game/server/: GBGameServer.cpp  GBGameServer.h  GameServer.cpp  GameServer.h
game/shared/: Constant.h  GBGameShared.cpp  GBGameShared.h  GameShared.cpp  GameShared.h  HeartBeat.cpp  HeartBeat.h  PrivateGameShared.cpp  PrivateGameShared.h
http/: CMakeLists.txt  Constant.cpp  GBHttpBodyReader.cpp  GBHttpHeaderReader.cpp  GBHttpHeaderReader.h  GBHttpMessageBody.cpp  GBHttpReader.cpp  GBHttpRequestLineReader.cpp  GBHttpRequestReader.cpp  GBHttpRequestReader.h  GBHttpResponse.cpp  GBHttpResponseWriter.cpp  GBHttpResponseWriter.h  GBHttpServer.cpp  GBHttpServer.h  GBHttpUtil.cpp  GBHttpUtil.h  GBHttpWriter.cpp
http/include/: GBHttpResponse.h
http/server/: GBHttpMessageBody.cpp  GBHttpReader.cpp  GBHttpRequestLineReader.cpp  GBHttpResponse.cpp  GBHttpServer.cpp  GBHttpUtil.cpp
http/src/: GBExpandedOverlapped.cpp  GBHttpBodyReader.cpp  GBHttpRequestLineReader.cpp  GBHttpRequestReader.cpp  GBHttpResponseWriter.cpp  GBHttpServer.cpp  GBHttpWriter.cpp
include/: Constant.h  GBExpandedOverlapped.h  GBGETMethod.h  GBHEADMethod.h  GBHttp0.9Router.h  GBHttp1.0Router.h  GBHttp1.1Router.h  GBHttpBodyReader.h  GBHttpHeaderReader.h  GBHttpLineReader.h  GBHttpMessageBody.h  GBHttpReader.h  GBHttpRequestLineReader.h  GBHttpRequestReader.h  GBHttpResponse.h  GBHttpResponseWriter.h  GBHttpRouter.h  GBHttpServer.h  GBHttpStaticRouter.h  GBHttpStatusLineWriter.h  GBHttpUtil.h  GBHttpVersionTypes.h  GBHttpWriter.h  GBMethod.h  GBPOSTMethod.h  GBPathSegment.h  GBResponse.h  GBRouter.h  stdafx.h
lib/openssl-1.1.1l/: version.txt
sample/: CMakeLists.txt  main.cpp
sample/client/: icon.svg.import  project.godot
sample/client/resource/: Characters Battle.png.import  Characters Overworld.png.import  Pokemon.png.import  Route 01.png.import  Route 02.png.import  Route 03.png.import  Route 04.png.import  Route 05.png.import  Tileset Day.png.import
sample/client/scene/: hero.tscn  map1.tscn
sample/client/script/: hero.gd
sample/flatbufferschema/: primitive_generated.h
sample/game/: main.cpp
sample/game/client/: main.cpp
sample/game/flatbufferschema/: pingpong.fbs  pingpong_generated.h  player.fbs  player_generated.h  primitive.fbs
sample/game/server/: main.cpp
sample/http/: main.cpp
sample/mock_client/: main.cpp
sample/server/: main.cpp
src/: Constant.cpp  GBExpandedOverlapped.cpp  GBGETMethod.cpp  GBHEADMethod.cpp  GBHttp0.9Router.cpp  GBHttp1.0Router.cpp  GBHttp1.1Router.cpp  GBHttpHeaderReader.cpp  GBHttpLineReader.cpp  GBHttpMessageBody.cpp  GBHttpReader.cpp  GBHttpRequestLineReader.cpp  GBHttpRequestReader.cpp  GBHttpResponse.cpp  GBHttpResponseWriter.cpp  GBHttpRouter.cpp  GBHttpServer.cpp  GBHttpStaticRouter.cpp  GBHttpStatusLineWriter.cpp  GBHttpUtil.cpp  GBMethod.cpp  GBPOSTMethod.cpp  GBPathSegment.cpp  GBResponse.cpp  GBRouter.cpp  main.cpp
test/: CMakeLists.txt  ExternalPolymorphismTest.cpp  SharedMutexTest.cpp  StopWatchTimerTest.cpp  TimerTest.cpp  shared_mutex_test.cpp  timer_test.cpp
